kubernetes/infrastructure/external-services/code/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: code.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code
                port:
                  number: 9882
